--- a/raw-data.html
+++ b/raw-data.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Battery -->
-    <div class="battery-indicator-container flex justify-end items-center pr-4 bg-gray-100">
+    <div class="battery-indicator-container flex justify-center items-center pr-4 bg-gray-100">
         <span class="mr-3 font-semibold">Battery</span>
         <div class="battery-icon">
             <div id="battery-level" class="battery-level h-full"></div>
